--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,11 @@ dependencies {
     implementation 'com.applandeo:material-calendar-view:1.7.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation "androidx.sqlite:sqlite-ktx:2.2.0"
+    implementation 'androidx.test.espresso:espresso-intents:3.4.0'
+    implementation 'androidx.test.ext:truth:1.4.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 
 }
